# outformer

./: .gitignore  README.md  pyproject.toml
docs/: api_reference.rst  conf.py  examples.md  index.rst  installation.md  json_schema.md  requirements.txt
docs/_static/: custom.css  custom.js
docs/source/: quickstart.md
examples/: README.md  chain_of_thought.py  function_calling.py  information_extraction.py
src/outformer/core/: __init__.py  jsonformer.py  token_processors.py
src/outformer/formatters/: highlight.py
