[project]
name = "outformer"
version = "0.1.0"
description = "Structure Outputs from Language Models"
authors = [
    {name = "milistu",email = "studen.m98@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "<=3.12, >=3.10"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "termcolor (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

